--- a/public/webmanifest.json
+++ b/public/webmanifest.json
@@ -1,20 +1,15 @@
 {
-  "name": "Ian King: Full Stack Software Engineer",
   "short_name": "Ian King",
+  "name": "Ian King: Full Stack Software Engineer",
   "icons": [
     {
-      "src": "%PUBLIC_URL%/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "%PUBLIC_URL%/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "start_url": ".",
   "display": "standalone",
-  "start_url": "/"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
